name:                wai-route
version:             0.1.0
synopsis:            Minimalistic, efficient routing for WAI
license:             OtherLicense
license-file:        LICENSE
author:              Roman S. Borschel
maintainer:          Roman S. Borschel <roman@pkaboo.org>
copyright:           2013 Roman S. Borschel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:     git
    location: git@github.com:romanb/wai-route.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
        Network.Wai.Route
      , Network.Wai.Route.Tree

    build-depends:
        base                 == 4.6.*
      , wai                  >= 2.0
      , unordered-containers >= 0.2
      , text                 >= 0.11
      , http-types           >= 0.8
      , bytestring           >= 0.10


executable wai-route-sample
    default-language: Haskell2010
    main-is: sample/Main.hs

    build-depends:
        base
      , bytestring     >= 0.10
      , http-types     >= 0.8
      , text           >= 0.11
      , wai            >= 2.0
      , wai-route
      , warp           >= 2.0

    ghc-options:
        -Wall
        -O2
        -fwarn-tabs
        -threaded
        -with-rtsopts=-T

executable wai-route-test
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-prof-options: -prof -auto-all
    ghc-options:
        -Wall
        -O2
        -fwarn-tabs
        -threaded
    other-modules: Test.Network.Wai.Route
    build-depends:
        base             == 4.6.*
      , bytestring       >= 0.10
      , http-types       >= 0.8
      , mtl              >= 2.1
      , QuickCheck       >= 2.5
      , tasty            >= 0.3
      , tasty-quickcheck >= 0.2
      , text             >= 0.11
      , wai              >= 2.0
      , wai-route
